--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body::after{
 .container input{
     background-color: rgb(170,200,255);
     min-height: 30px;
+    text-align: center;
     color: black;
     margin-top: 5px;
     margin-bottom: 20px;
